Source/Client/wwwroot/css/app.css
@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');

@font-face {
    font-family: 'alex_brushregular';
    src: url('../font/alexbrush-regular-webfont.woff2') format('woff2'), url('../font/alexbrush-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

/*#region Sweet Bkg Image! */
html {
    /* Location of the image */
    /*    background-image: url(../images/vector-red-ribbon-bow-350px.png);
*/ /* Background image is centered vertically and horizontally at all times */
    /*    background-position: top left;*/
    background-position: center center;
    /* Background image doesn't tile */
    background-repeat: no-repeat;
    /* Background image is fixed in the viewport so that it doesn't move when 
     the content's height is greater than the image's height */
    background-attachment: fixed;
    /* This is what makes the background image rescale based
     on the container's size */
    background-size: cover;
    /* Set a background color that will be displayed
     while the background image is loading */
    background-color: black;
}

@media (max-width: 480px) {
    html {
        background-image: url(../images/GiftsBkg_480px.jpg);
    }
}

@media (min-width: 481px) and (max-width: 1024px) {
    html {
        background-image: url(../images/GiftsBkg_1024px.jpg);
    }
}

@media (min-width: 1025px) and (max-width: 1920px) {
    html {
        background-image: url(../images/GiftsBkg_1920px.jpg);
    }
}

@media (min-width: 1921px) and (max-width: 2560px) {
    html {
        background-image: url(../images/GiftsBkg_2560px.jpg);
    }
}

@media (min-width: 2561px) {
    html {
        background-image: url(../images/GiftsBkg_5600px.jpg);
    }
}
/*#endregion*/

.max-w70-control {
    max-width: 70px;
}

.max-w100-control {
    max-width: 100px;
}

.max-w150-control {
    max-width: 150px;
}

.max-width-limited {
    max-width: 400px;
}

/*#region Rounded corner time! */
.card.rounded-corners {
    border-radius: 30px;
}

    .card.rounded-corners > .card-body {
        border-bottom-right-radius: inherit;
        border-bottom-left-radius: inherit;
    }

    .card.rounded-corners > .card-header {
        border-top-left-radius: inherit;
        border-top-right-radius: inherit;
    }

.container {
    background-color: rgba(0,0,0,0.7);
    border-radius: 30px;
    padding: 20px;
    margin-top: 15px;
}
/*#endregion */

/* Radzen */
.rz-tick-text {
    fill: rgba(255, 255, 255, 1);
}
body:not(.rz-default-scrollbars) ::-webkit-scrollbar-thumb {
    background: blue;
}
.rz-dialog {
    background-color: black;
}
.rz-dialog-titlebar {
    background-color: rgb(80 61 115);
}
.rz-button.btn-primary, .btn-primary.rz-paginator-element {
    background-color: #dc3545;
}
.rz-button.btn-secondary, .btn-secondary.rz-paginator-element {
    background-color: #6c757d;
}
.rz-dialog-mask {
    background-color: black;
}

/* TODO: WANT SASS?
    $primary-color: #f4f4f3; */
.loader-centered {
    position: fixed;
    z-index: 1031;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.form-group {
    display: inline-block;
}

/*#region Dark mode! */
body {
    background-color: transparent;
    color: white;
}

.scroll-container {
    width: 100%;
    overflow-x: scroll;
    white-space: nowrap;
    height: 135px;
    border: solid 3px rebeccapurple;
    padding: 10px;
}

    .scroll-container::-webkit-scrollbar {
        height: 15px;
    }

    .scroll-container::-webkit-scrollbar-track {
        background: orange;
        border-radius: 10px;
    }

    .scroll-container::-webkit-scrollbar-thumb {
        background: blue;
        border-radius: 10px;
    }

.user-online-count-container {
    float: right;
    font-size: medium;
}
    .user-online-count-container::before {
        content: "\2605";
        color: springgreen;
        left: 0px;
        bottom: -43px;
        font-size: xx-large;
        z-index: 5;
    }
.user-online-count {
    position: relative;
    float: right;
    margin-top: 13px;
    margin-left: 4px;
}

.user-list-count {
    position: relative;
    left: -16px;
    bottom: -31px;
    background-color: rebeccapurple;
    padding: 4px;
}

.user-image-container.online-now::before {
    content: "\2605";
    color: springgreen;
    position: absolute;
    left: 0px;
    bottom: -43px;
    font-size: xx-large;
    z-index: 5;
}

.user-image-container.active-user::after {
    content: "\25b2"; /* up arrow */
    position: absolute;
    right: 57px;
    bottom: -47px;
    color: red;
    z-index: 5;
}

.user-image {
    margin-right: 4px;
    width: 80px;
    height: 90px;
}

.active-icon {
    color: chartreuse;
}
.inactive-icon {
    color: rgb(220, 53, 69);
}
.chat-box {
    height: 70px;
    overflow-x: hidden;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    border: 1px solid gray;
    padding-left: 10px;
}
    .chat-box li {
        list-style: none;
    }
        .chat-box li::before {
            content: "\00BB";
            padding-right: 5px;
        }

.modal-content {
    background-color: #4a3126;
}

img.inactive-user {
    border: solid 1px black;
    -webkit-filter: grayscale(0.5);
    filter: grayscale(0.5);
    opacity: 0.5;
}

img.active-user {
    border: solid 1px red;
    -webkit-filter: grayscale(0) !important;
    filter: grayscale(0) !important;
    opacity: 1;
}

.card-body {
    background-color: black;
}

.btn-link {
    color: white;
}

.bg-dark {
    background-color: black !important;
}

.alert-secondary {
    background-color: #f7f96d;
}

.table {
    color: inherit
}

.table.highlight-on-hover {
    border-collapse: collapse;
}
    .table.highlight-on-hover thead tr:hover {
        background: none;
    }
    .table.highlight-on-hover tbody tr:hover:nth-child(odd) {
        background: #35003c;
    }
    .table.highlight-on-hover tbody tr:hover:nth-child(even) {
        background: #00053c;
    }

a, .btn-link {
    color: #86c0ff;
}

    a:hover, .btn-link:hover {
        color: yellow;
    }

.list-note {
    color: #a9ff00;
}
/*#endregion*/
.card-header {
    font-family: 'alex_brushregular', Arial, sans-serif;
    padding-bottom: 0;
    background-color: #0062cc; /* For browsers that do not support gradients */
    background-image: linear-gradient(to bottom, #609ad8, #0062cc) !important;
}

a {
    cursor: pointer;
}

.full-screen {
    background: black;
    color: white;
    position: absolute;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
}
.app-container {
    min-height: 320px;
    overflow: hidden;
    background-color: transparent;
}

.grid-container {
    display: grid;
    grid-template-columns: 210px auto;
    padding: 5px;
}

.grid-item {
    padding: 10px;
    font-size: 30px;
    text-align: left;
}

.btn-primary {
    color: #fff;
    background-color: #1b6ec2;
    border-color: #1861ac;
}
    .btn-primary:hover {
        background-color: #0151a7;
    }
.btn-danger:hover {
    background-color: #aa1f2c;
}

.top-row {
    height: 3.5rem;
    display: flex;
    align-items: center;
}

.main {
    flex: 1;
}

    .main .top-row {
        background-color: #f7f7f7;
        border-bottom: 1px solid #d6d5d5;
        justify-content: flex-end;
    }

        .main .top-row > a, .main .top-row .btn-link {
            white-space: nowrap;
            margin-left: 1.5rem;
        }

        .main .top-row a:first-child {
            overflow: hidden;
            text-overflow: ellipsis;
        }

.sidebar {
    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
}

    .sidebar .top-row {
        background-color: rgba(0,0,0,0.4);
    }

    .sidebar .navbar-brand {
        font-size: 1.1rem;
    }

    .sidebar .oi {
        width: 2rem;
        font-size: 1.1rem;
        vertical-align: text-top;
        top: -2px;
    }

    .sidebar .nav-item {
        font-size: 0.9rem;
        padding-bottom: 0.5rem;
    }

        .sidebar .nav-item:first-of-type {
            padding-top: 1rem;
        }

        .sidebar .nav-item:last-of-type {
            padding-bottom: 1rem;
        }

        .sidebar .nav-item a {
            color: #d7d7d7;
            border-radius: 4px;
            height: 3rem;
            display: flex;
            align-items: center;
            line-height: 3rem;
        }

            .sidebar .nav-item a.active {
                background-color: rgba(255,255,255,0.25);
                color: white;
            }

            .sidebar .nav-item a:hover {
                background-color: rgba(255,255,255,0.1);
                color: white;
            }

.content {
    padding-top: 1.1rem;
}

.navbar-toggler {
    background-color: rgba(255, 255, 255, 0.1);
}

.valid.modified:not([type=checkbox]) {
    outline: 1px solid #26b050;
}

.invalid {
    outline: 1px solid red;
}

.validation-message {
    color: #ff9e9e;
}

#blazor-error-ui {
    background: black;
    color: white;
    bottom: 0;
    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
    display: none;
    left: 0;
    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
    position: fixed;
    width: 100%;
    z-index: 1000;
}

    #blazor-error-ui .dismiss {
        cursor: pointer;
        position: absolute;
        right: 0.75rem;
        top: 0.5rem;
    }

